--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     },
     "main": "./xmlhttprequest-cookie.js",
     "devDependencies": {
-        "grunt":                "~1.0.1",
-        "grunt-cli":            "~1.2.0",
-        "grunt-contrib-jshint": "~1.1.0",
-        "grunt-contrib-clean":  "~1.1.0"
+        "grunt":                "1.0.2",
+        "grunt-cli":            "1.2.0",
+        "grunt-contrib-jshint": "1.1.0",
+        "grunt-contrib-clean":  "1.1.0"
     },
     "dependencies" : {
         "xmlhttprequest":       ">=1.8.0"
     },
     "engines": {
-        "node":                 ">=0.8.0"
+        "node":                 ">=4.0.0"
     }
 }
